install-meta (0.0.45) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed,  7 Mar 2007 20:13:20 +0100

install-meta (0.0.44) unstable; urgency=low

  * add Office-Koffice.bm Office-Gnumeric_Abiword.bm

 -- Horst Tritremmel <hjt@sidux.com>  Wed,  7 Mar 2007 09:12:52 +0100

install-meta (0.0.43) unstable; urgency=low

  * compiler warning shut up
  * category text is now bold
  * bugfix for bold category text
  * new icons for category
  * source packages.d bugfix for info window
  * add game packages

 -- Horst Tritremmel <hjt@sidux.com>  Tue,  6 Mar 2007 15:22:20 +0100

install-meta (0.0.42) unstable; urgency=low

  * add categories

 -- Horst Tritremmel <hjt@sidux.com>  Sat,  3 Mar 2007 18:18:47 +0100

install-meta (0.0.41) unstable; urgency=low

  * add meta-package info 

 -- Horst Tritremmel <hjt@sidux.com>  Thu,  1 Mar 2007 22:07:31 +0100

install-meta (0.0.39) unstable; urgency=low

  [ Horst Tritremmel ]
  * made *.bm files non executable

  [ Stefan Lippers-Hollmann ]
  * strip #!/bin/bash from *.bm files to shut up lintian.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 22 Feb 2007 15:52:41 +0100

install-meta (0.0.38) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 21 Feb 2007 02:21:35 +0100

install-meta (0.0.37) unstable; urgency=low

  * add fvwm-crystal.bm
  * umount message fix
  * added postprocess to fvwm and fluxbox so the get the sidux wallpaper as
    default.

 -- Joaquim Boura <x-un-i@sidux.com>  Wed, 21 Feb 2007 00:17:38 +0100

install-meta (0.0.36) unstable; urgency=low

  * rm : in Russian modules 

 -- Horst Tritremmel <peter_weber69@gmx.at>  Tue, 20 Feb 2007 10:20:09 +0100

install-meta (0.0.35) unstable; urgency=low

  * add Russian modules
  * remove Generic Server

 -- Horst Tritremmel <peter_weber69@gmx.at>  Tue, 20 Feb 2007 10:14:37 +0100

install-meta (0.0.34) unstable; urgency=low
